Ishit_Choudhary/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/Govind/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/Govind/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/Govind/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Users/Govind/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Users/Govind/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Users/Govind/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/Govind/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/Govind/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/Govind/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/Govind/Downloads/Hello
-d
/Users/Govind/Downloads/Hello/doc
-encoding
UTF-8
-charset
UTF-8
/Users/Govind/Downloads/Hello/Availiblity.java
<---- end of javadoc command ---->
Loading source file /Users/Govind/Downloads/Hello/Availiblity.java...
/Users/Govind/Downloads/Hello/Availiblity.java:110: error: illegal start of statement
/Users/Govind/Downloads/Hello/Availiblity.java:102: error: reached end of file while parsing
        else
            ^
2 errors
